# hgboost

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  hgboost_classification_examples.ipynb  hgboost_examples.ipynb  hgboost_regression_examples.ipynb  make_build.sh  make_clean.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml
docs/: HOWTO.txt
docs/figs/: linkedin_post.pptx  schematic_overview.pptx
docs/pages/doctrees/: Abstract.doctree  Algorithms.doctree  Blog.doctree  Classification.doctree  Coding quality.doctree  Cross validation and hyperparameter tuning.doctree  Documentation.doctree  Examples.doctree  Installation.doctree  Performance.doctree  Regression.doctree  Save and Load.doctree  environment.pickle  hgboost.hgboost.doctree  index.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Abstract.html  Algorithms.html  Blog.html  Classification.html  Coding quality.html  Cross validation and hyperparameter tuning.html  Documentation.html  Examples.html  Installation.html  Performance.html  Regression.html  Save and Load.html  genindex.html  hgboost.hgboost.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: Abstract.rst.txt  Algorithms.rst.txt  Blog.rst.txt  Classification.rst.txt  Coding quality.rst.txt  Cross validation and hyperparameter tuning.rst.txt  Documentation.rst.txt  Examples.rst.txt  Installation.rst.txt  Performance.rst.txt  Regression.rst.txt  Save and Load.rst.txt  hgboost.hgboost.rst.txt  index.rst.txt  sponsor.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Abstract.rst  Algorithm.rst  Algorithms.rst  Blog.rst  Classification.rst  Coding quality.rst  Cross validation and hyperparameter tuning.rst  Documentation.rst  Examples.rst  Installation.rst  Performance.rst  Regression.rst  Save and Load.rst  conf.py  gridsearch.gridsearch.rst  helper.py  hgboost.hgboost.rst  index.rst
gridsearch/: __init__.py  balanced_sample_maker.py  confmatrix.py  examples.py  gridsearch.py  gridsearchGradientBoostingC.py  gridsearchHyperOpt.py  twoClassSummary.py  xxx.py
gridsearch/old/: gridsearchGradientBoostingR.py  gridsearchXGboostC.py  stepwise_selection.py
hgboost/: __init__.py  examples.py  hgboost.py  shapplot.py  test.pkl
hgboost/tests/: tests_general.py
notebooks/: hgboost_classification_examples.ipynb  hgboost_regression_examples.ipynb  simple_example.ipynb
old/: gridsearchXGboostR.py  stepwise_selection.py
tests/: test_gridsearch.py  test_hgboost.py
