[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hgboost"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "hgboost is a python package for hyperparameter optimization for xgboost, catboost and lightboost for both classification and regression tasks."
readme = "README.md"
requires-python = ">=3"
license = "MIT"
keywords = [
    "Python",
    "machine learning",
    "hyperparameter optimization",
    "catboost",
    "xgboost",
    "lightgbm",
    "grid search",
    "cross-validation",
    "classification",
    "regression",
    "boosting",
    "automated machine learning",
    "model selection",
    "ensemble methods"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    'datazets',
    'pypickle',
    'matplotlib',
    'numpy',
    'pandas',
    'tqdm',
    'hyperopt',
    'lightgbm>=4.1.0',
    # 'catboost',
    'xgboost',
    'classeval',
    'treeplot',
    'df2onehot',
    'colourmap',
    'seaborn',
    ]

[project.urls]
Homepage = "https://erdogant.github.io/hgboost"
Download = "https://github.com/erdogant/hgboost/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["hgboost"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "hgboost.__version__" }
